# Colcoviu2026MateInfo

./: CMakeLists.txt  README.md  main.cpp
include/: App.h  Cadru_didactic.h  Caz.h  Comisie.h  Consult_extern.h  Decan.h  Exceptions.h  Fapta.h  Fapta_asis.h  Fapta_com.h  Fapta_factory.h  Fapta_info.h  Persoana.h  Persoana_factory.h  Repr_asociatie.h
source/: App.cpp  Cadru_didactic.cpp  Caz.cpp  Comisie.cpp  Consult_extern.cpp  Decan.cpp  Fapta.cpp  Fapta_asis.cpp  Fapta_com.cpp  Fapta_info.cpp  Persoana.cpp  Persoana_factory.cpp  Repr_asociatie.cpp
